# mlir-toy-standalone

./: CMakeLists.txt  README.md
cmake/: MLIRToy.cmake
include/toy/: CMakeLists.txt  Dialect.td  Ops.td
